--- a/praticando001.html
+++ b/praticando001.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
     <link rel="stylesheet" href="praticando001.css">
-<script src="praticando001.js"></script>
+
 </head>
 <body>
     
-<div><p>clique aqui</p></div>
+<div id="bloco" class="sla">
+<div id="textinho" class="texto">Clique</div>
+</div>
+<audio src="la ele audio.mp3" id="musica" ></audio>
 
 
 
-
+<script src="praticando001.js"></script>
 </body>
 </html>
